# Squid-gui

./: CHANGELOG  CMakeLists.txt  README  README.md  squid-gui.kdev4
cmake/: .directory
cmake/modules/: DetectMachine.cmake  FindE2Guardian.cmake
debian/: .directory  changelog  control  copyright  dirs  rules  squid-gui.install  watch
src/: .directory  CMakeLists.txt  about.cpp  about.h  dansguardian_config.cpp  dansguardian_config.h  defines.h  e2guardian_config.cpp  e2guardian_config.h  images.qrc.depends  lang.qrc.depends  main.cpp  mainwindow.cpp  mainwindow.h  settingsmanager.cpp  settingsmanager.h  squid_config.cpp  squid_config.h  status_service.cpp  status_service.h
src/desktop/: squid-gui.desktop
src/gui/: about.ui  mainwindow.ui  status_service.ui
src/images/: .directory
src/lang/: en_EN.ts  it_IT.qm  it_IT.ts
src/policy/: com.github.kratos83.squid-gui.policy  squid-gui_polkit
